Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-3862

TSHttpTxnCacheLookupUrlSet doesn't work if lookup_url has no storage allocated.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 6.0.0
    • TS API
    • None

    Description

      The TS API TSHttpTxnCacheLookupUrlSet currently expects the lookup_url to have storage allocated previously. It'd be better if the storage allocation is done automatically within the API.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: