TS-3862 Allocate memory for the lookup URL if needed

There are some cases where it might not already be allocated,
so we should ensure that we do so. Thanks Sudheer.